# smart-rom-sync

./: .gitignore  README.md  config.toml  example.toml  pyproject.toml
.github/workflows/: check_types.yml
smart-rom-sync/: __main__.py
smartromsync/: __init__.py  __main__.py  logger.py  sy_config.py  sy_helpers.py  sy_sync.py  sy_types.py
tests/: conftest.py  test__meta.py  test_logger_unit.py  test_main.py  test_myr_downloader.py
tests/configs/: valid_no_systems.toml
